tests/fixtures/pass/async/async_basic_await.walrus
async fn bump : x {
    return x + 1;
}

let task = bump(41);
println(task);
println(await task);
println(await task);
