tests/fixtures/fail/async/async_call_arity_error.walrus
async fn fetch_data : url {
    return url;
}

let task = fetch_data();
println(await task);
